# ros_yolo2

./: .gitignore  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
data/: .gitignore  README.md
include/darknet/: yolo2.h
msg/: Detection.msg  ImageDetections.msg
scripts/: README.md  labelImg_to_yolo.py
src/: yolo2_node.cpp  yolo2_nodelet.cpp
src/darknet/: yolo2.cpp
