<?xml version="1.0"?>
<package>
  <name>yolo2</name>
  <version>0.0.1</version>
  <description>YOLO2 integration with ROS</description>

  <maintainer email="tiago.shibata@thunderatz.org">Tiago Koji Castro Shibata</maintainer>
  <author email="tiago.shibata@thunderatz.org">Tiago Koji Castro Shibata</author>

  <license>MIT</license>
  <url type="website">http://thunderatz.org</url>
  <url type="repository">https://github.com/ThundeRatz/ros_yolo2</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
